# AI-Ledger

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  docker-dev.yml  package-lock.json  pyproject.toml  requirements.txt
.github/workflows/: eslint.yml  pre-commit.yml
apps/auth/: main.py  settings.py
apps/backend/: autodiscover.py  main.py
apps/backend/api/paychecks/: post.py
apps/backend/api/paychecks/ocr/: service.py
apps/backend/api/paychecks/ocr/extract/: config.py  debug_view.py  extractor.py  fuzzy.py  hard_stop.py  paycheck_metadata_extractor.py  product_patterns.py  scoring_debug.py  segment_debug.py
apps/backend/api/subs/: post.py
apps/backend/api/users/: post.py
apps/frontend/: eslint.config.js  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
apps/frontend/src/: App.js  global.d.ts  index.js  main.tsx
apps/frontend/src/api/: ApiConfig.ts  Auth.mock.ts  AuthApi.ts  Axios.ts  PaychecksApi.ts  SubsApi.ts  UsersApi.ts
apps/frontend/src/assets/scss/: consts.scss  index.scss  main.scss  scss.md  temp.scss  temp2.scss
apps/frontend/src/components/: Modal.tsx  ProgressBar.tsx
apps/frontend/src/configs/: RoutesConfig.tsx  RoutesConst.ts
apps/frontend/src/interfaces/models/: PaychecksModel.ts  SubModel.ts  UserModel.ts
apps/frontend/src/interfaces/request/: AuthRequest.ts  PaychecksRequest.ts  SubsRequest.ts  UserRequest.ts
apps/frontend/src/interfaces/response/: AuthResponse.ts  PaychecksResponse.ts  SubResponse.ts  UserResponse.ts
apps/frontend/src/layouts/: EmptyLayout.tsx  MainLayout.tsx  PublicLayout.tsx
apps/frontend/src/pages/: Analitics.tsx  Login.tsx  LoginPage.tsx  Main.tsx  Operations.tsx  Profile.tsx  Registration.tsx  RegistrationPage.tsx  Subscriptions.tsx  UploadingReceipts.tsx
apps/frontend/src/providers/: RequireAuth.tsx
apps/frontend/src/services/: AuthService.ts  ExecuteProtectedRequest.ts
apps/frontend/src/utils/: Date.ts
apps/frontend/src/widgets/: Header.tsx  Login.tsx  LoginWidget.tsx  OperationsWidget.tsx  Profile.tsx  ProfileWidget.tsx  RegistrationWidget.tsx  Sidebar.tsx  SubscriptionsWidget.tsx  Temp.tsx  UploadFile.tsx
apps/frontend/src/widgets/main/: CategoriesСhart.tsx  LastOperations.tsx  TodayStatistics.tsx  UpcomingSubscriptions.tsx
apps/frontend/src/widgets/modal/: AddOperationModal.tsx  AddSubModal.tsx  SuccessModal.tsx  SuccessOperationModal.tsx
apps/frontend/src/widgets/subscriptions/: SubList.tsx  SubStatistics.tsx
config/nginx/: nginx.conf
docs/: GIT_DOC.md  UPDATE_DEPENDENCIES.md
docs/api/: AUTH.md  PAYCHECK.md  SUB.md  TEMPLATE.md  USER.md
docs/git/: GIT_DOC.md
shared/: database.py
shared/models/: __init__.py  models.py  paycheck.py  sub.py  user.py
shared/models/request/: paycheck.py  sub.py  user.py
(+30 files in other folders)
