[tool.poetry]
name = "ai-ledger"
version = "0.1.0"
description = "AI Ledger - financial tracker"
authors = [
    "max1m111an <maksimilianbegunov@inbox.ru>",
    "PewPewP <na.aleksandrova2014@gmail.com>",
    "Qurlya <pingvining05@mail.ru>"
]
readme = "README.md"
packages = [{include = "apps"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
bcrypt = "^4.3.0"
pydantic = "^2.11.9"
starlette = "^0.48.0"
fastapi-another-jwt-auth = "^0.1.11"
cffi = "^2.0.0"
sqlmodel = "^0.0.25"
aiomysql = "^0.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"